Доработан метод получения и вывода таблицы игры

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "nodemon": "^3.0.2"
   },
   "dependencies": {
+    "@klny/text-table": "^1.0.2",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "telegraf": "^4.15.3",
