--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "@klny/text-table": "^1.0.2",
     "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "telegraf": "^4.15.3",
     "telegraf-stateless-question": "^2.0.1"
   }
